fix bugs in product service and add tests
