# product/internal/api/grpc/handler/product.go
@@ -23,7 +23,7 @@ func NewProductRoutes(productUsecase *usecase.ProductUsecase, logger *logger.Log
 	}
 }
 
-func (routes *productRoutes) GetProduct(ctx context.Context, req *pbProduct.GetProductRequest) (*pbProduct.ProductModel, error) {
+func (routes *productRoutes) GetProduct(ctx context.Context, req *pbProduct.GetProductRequest) (*pbProduct.ProductResponse, error) {
 	product, err := controller.GetProduct(ctx, routes.productUsecase, req)
 	if err != nil {
 		return nil, err
@@ -32,71 +32,71 @@ func (routes *productRoutes) GetProduct(ctx context.Context, req *pbProduct.GetP
 	return product.ToProto(), nil
 }
 
-func (routes *productRoutes) GetAllProducts(ctx context.Context, req *pbProduct.GetAllProductsRequest) (*pbProduct.GetProductsResponse, error) {
+func (routes *productRoutes) GetAllProducts(ctx context.Context, req *pbProduct.GetAllProductsRequest) (*pbProduct.ProductsResponse, error) {
 	products, err := controller.GetAllProducts(ctx, routes.productUsecase, req)
 	if err != nil {
 		return nil, err
 	}
 
-	protoProducts := make([]*pbProduct.ProductModel, 0, len(products))
+	protoProducts := make([]*pbProduct.ProductResponse, 0, len(products))
 	for _, product := range products {
 		protoProducts = append(protoProducts, product.ToProto())
 	}
 
-	return &pbProduct.GetProductsResponse{
+	return &pbProduct.ProductsResponse{
 		Products: protoProducts,
 	}, nil
 }
 
-func (routes *productRoutes) GetAllUserProducts(ctx context.Context, req *pbProduct.GetAllUserProductsRequest) (*pbProduct.GetProductsResponse, error) {
+func (routes *productRoutes) GetAllUserProducts(ctx context.Context, req *pbProduct.GetAllUserProductsRequest) (*pbProduct.ProductsResponse, error) {
 	products, err := controller.GetAllUserProducts(ctx, routes.productUsecase, req)
 	if err != nil {
 		return nil, err
 	}
 
-	protoProducts := make([]*pbProduct.ProductModel, 0, len(products))
+	protoProducts := make([]*pbProduct.ProductResponse, 0, len(products))
 	for _, product := range products {
 		protoProducts = append(protoProducts, product.ToProto())
 	}
 
-	return &pbProduct.GetProductsResponse{
+	return &pbProduct.ProductsResponse{
 		Products: protoProducts,
 	}, nil
 }
 
-func (routes *productRoutes) GetAllCategoriesProducts(ctx context.Context, req *pbProduct.GetAllCategoryProductsRequest) (*pbProduct.GetProductsResponse, error) {
+func (routes *productRoutes) GetAllCategoriesProducts(ctx context.Context, req *pbProduct.GetAllCategoryProductsRequest) (*pbProduct.ProductsResponse, error) {
 	products, err := controller.GetAllCategoryProducts(ctx, routes.productUsecase, req)
 	if err != nil {
 		return nil, err
 	}
 
-	protoProducts := make([]*pbProduct.ProductModel, 0, len(products))
+	protoProducts := make([]*pbProduct.ProductResponse, 0, len(products))
 	for _, product := range products {
 		protoProducts = append(protoProducts, product.ToProto())
 	}
 
-	return &pbProduct.GetProductsResponse{
+	return &pbProduct.ProductsResponse{
 		Products: protoProducts,
 	}, nil
 }
 
-func (routes *productRoutes) GetAllCategoryProducts(ctx context.Context, req *pbProduct.GetAllCategoryProductsRequest) (*pbProduct.GetProductsResponse, error) {
+func (routes *productRoutes) GetAllCategoryProducts(ctx context.Context, req *pbProduct.GetAllCategoryProductsRequest) (*pbProduct.ProductsResponse, error) {
 	products, err := controller.GetAllCategoryProducts(ctx, routes.productUsecase, req)
 	if err != nil {
 		return nil, err
 	}
 
-	protoProducts := make([]*pbProduct.ProductModel, 0, len(products))
+	protoProducts := make([]*pbProduct.ProductResponse, 0, len(products))
 	for _, product := range products {
 		protoProducts = append(protoProducts, product.ToProto())
 	}
 
-	return &pbProduct.GetProductsResponse{
+	return &pbProduct.ProductsResponse{
 		Products: protoProducts,
 	}, nil
 }
 
-func (routes *productRoutes) CreateProduct(ctx context.Context, req *pbProduct.CreateProductRequest) (*pbProduct.ProductModel, error) {
+func (routes *productRoutes) CreateProduct(ctx context.Context, req *pbProduct.CreateProductRequest) (*pbProduct.ProductResponse, error) {
 	product, err := controller.CreateProduct(ctx, routes.productUsecase, req)
 	if err != nil {
 		return nil, err
@@ -105,7 +105,7 @@ func (routes *productRoutes) CreateProduct(ctx context.Context, req *pbProduct.C
 	return product.ToProto(), nil
 }
 
-func (routes *productRoutes) UpdateProduct(ctx context.Context, req *pbProduct.UpdateProductRequest) (*pbProduct.ProductModel, error) {
+func (routes *productRoutes) UpdateProduct(ctx context.Context, req *pbProduct.UpdateProductRequest) (*pbProduct.ProductResponse, error) {
 	product, err := controller.UpdateProduct(ctx, routes.productUsecase, req)
 	if err != nil {
 		return nil, err
@@ -123,7 +123,16 @@ func (routes *productRoutes) DeleteProduct(ctx context.Context, req *pbProduct.D
 	return &pbProduct.DeleteProductResponse{}, nil
 }
 
-func (routes *productRoutes) GetCategory(ctx context.Context, req *pbProduct.GetCategoryRequest) (*pbProduct.CategoryModel, error) {
+func (routes *productRoutes) ModerateProduct(ctx context.Context, req *pbProduct.ModerateProductRequest) (*pbProduct.ProductResponse, error) {
+	product, err := controller.ModerateProduct(ctx, routes.productUsecase, req)
+	if err != nil {
+		return nil, err
+	}
+
+	return product.ToProto(), nil
+}
+
+func (routes *productRoutes) GetCategory(ctx context.Context, req *pbProduct.GetCategoryRequest) (*pbProduct.CategoryResponse, error) {
 	category, err := controller.GetCategory(ctx, routes.productUsecase, req)
 	if err != nil {
 		return nil, err
@@ -132,23 +141,23 @@ func (routes *productRoutes) GetCategory(ctx context.Context, req *pbProduct.Get
 	return category.ToProto(), nil
 }
 
-func (routes *productRoutes) GetAllCategories(ctx context.Context, req *pbProduct.GetAllCategoriesRequest) (*pbProduct.GetAllCategoriesResponse, error) {
+func (routes *productRoutes) GetAllCategories(ctx context.Context, req *pbProduct.GetAllCategoriesRequest) (*pbProduct.CategoriesResponse, error) {
 	categories, err := controller.GetAllCategories(ctx, routes.productUsecase, req)
 	if err != nil {
 		return nil, err
 	}
 
-	protoCategories := make([]*pbProduct.CategoryModel, 0, len(categories))
+	protoCategories := make([]*pbProduct.CategoryResponse, 0, len(categories))
 	for _, category := range categories {
 		protoCategories = append(protoCategories, category.ToProto())
 	}
 
-	return &pbProduct.GetAllCategoriesResponse{
+	return &pbProduct.CategoriesResponse{
 		Categories: protoCategories,
 	}, nil
 }
 
-func (routes *productRoutes) CreateDiscount(ctx context.Context, req *pbProduct.CreateDiscountRequest) (*pbProduct.ProductModel, error) {
+func (routes *productRoutes) CreateDiscount(ctx context.Context, req *pbProduct.CreateDiscountRequest) (*pbProduct.ProductResponse, error) {
 	product, err := controller.CreateDiscount(ctx, routes.productUsecase, req)
 	if err != nil {
 		return nil, err
@@ -157,11 +166,11 @@ func (routes *productRoutes) CreateDiscount(ctx context.Context, req *pbProduct.
 	return product.ToProto(), nil
 }
 
-func (routes *productRoutes) DeleteDiscount(ctx context.Context, req *pbProduct.DeleteDiscountRequest) (*pbProduct.DeleteDiscountResponse, error) {
-	err := controller.DeleteDiscount(ctx, routes.productUsecase, req)
+func (routes *productRoutes) DeleteDiscount(ctx context.Context, req *pbProduct.DeleteDiscountRequest) (*pbProduct.ProductResponse, error) {
+	product, err := controller.DeleteDiscount(ctx, routes.productUsecase, req)
 	if err != nil {
 		return nil, err
 	}
 
-	return &pbProduct.DeleteDiscountResponse{}, nil
+	return product.ToProto(), nil
 }
